New in svn version:

   * code "molecularpdos.x" computing PDOS on selected molecular orbitals
     separately computed (courtesy of Guido Fratesi)

Incompatible changes in svn version:

   * XSpectra: variable ef_r, used to eliminate the occupied states
               from the spectrum, replaced by new variable xe0  
   * PHonon: input variable iverbosity => verbosity

Fixed in svn version:

   * Bug in space-group generator in the monoclinic case.
   * atomic: a small bug was preventing the generation of non-PAW 
     pseudopotentials with GIPAW reconstruction data
   * Changes made in rev.10251 had broken pw.x -pw2casino when just
     one k-point per processor was present. Also: pp converter from upf 
     to casino produced invalid pp for Z>=10 due to insufficient format
   * Symmetry printout could lead to error exit in same cases
   * Restarting from incomplete calculation could lead in some cases
     to mysterious crashes due to usage of unitialized communicator

Incompatible changes in 5.1.1 version:

   * Regularization of DFT names for nonlocal functionals:
       "vdw-df3"                   replaced by "vdw-df-obk8"
       "vdw-df4" and "optb86b-vdw" replaced by "vdw-df-ob86"
       "rev-vdw-df2"               replaced by "vdw-df2-b86r"
     Explanation: We have tried to unify the naming convention of the vdW-DF 
     family of functionals built on "Dion et al., PRL 92, 246401 (2004)." 
     Within this family, numbering should be used for different non-local
     pieces of the functionals, such as vdW-DF2. If functionals only change the
     (semi)local contribution, the choice of (semi)local functional should be 
     attached at the end of the name, such as vdW-DF-C09 or vdW-DF-cx.

New in 5.1.1 version:

   * CP: Hybrid functionals with Wannier functions
   * Added possibility to provide structure via space-group number and
     Wyckoff positions (experimental)
   * Added vdW-DF-cx, Berland and Hyldgaard, PRB 89, 035412 (2014)